# claudectl

./: .gitattributes  .gitignore  Open Repo cmd.bat  README.md  claude-sessions.py  pyproject.toml
.claude/rules/: claudectl-mem-Claude-claude_sessions.md  claudectl-mem-Claude-root.md  claudectl-mem-Claude-tests.md  claudectl-mem-Claude-tools.md
claude_sessions/: __main__.py  accounts.py  agents.py  brief.py  claude_md.py  concise_hook.py  config.py  connections.py  context_inject.py  ctxaudit.py  denygen.py  guard_hook.py  gui.py  gui_api.py  gui_html.py  gui_qt.py  hooks.py  lessons.py  logbash_hook.py  main.py  mcp.py  memhub.py  memory.py  memrules.py  minimalcode_hook.py  omniroute.py  paths.py  plan_execute.py  recall.py  render.py  review.py  search.py  session_menu.py  sessions.py  skills.py  stats.py  system_prompt.py  testfilter_filter.py  testfilter_hook.py  transcript.py  (+5 more)
claude_sessions/skills_templates/changelog/: SKILL.md
claude_sessions/skills_templates/code-explainer/: SKILL.md
claude_sessions/skills_templates/commit-message/: SKILL.md
claude_sessions/web/: app.css  app.js  index.html
docs/: _recon.md  gui-audit.md  gui-rework-notes.md  plan-execute-audit.md
tests/: harness.py  test_accounts.py  test_bgscan.py  test_brief.py  test_config.py  test_connections.py  test_context_inject.py  test_ctxaudit.py  test_denygen.py  test_economy_model.py  test_features.py  test_gui.py  test_gui_flicker.py  test_gui_parity.py  test_launch_integration.py  test_memory.py  test_memory_graph.py  test_model_guide.py  test_multiaccount_memory.py  test_omniroute.py  test_paths.py  test_plan_execute.py  test_regressions.py  test_render.py  test_review.py  test_tui_agents.py  test_tui_generators.py  test_tui_hooks.py  test_tui_launch.py  test_tui_main.py  test_tui_mcp.py  test_tui_memory.py  test_tui_pager.py  test_tui_sessions.py  test_tui_skills.py  test_tui_stats.py  test_tui_widgets.py  test_ui_progress.py  test_usage.py  test_worklog.py
tools/: make_gifs.py  make_gui_icon.py  verify_model_routing.py
(+5 files in other folders)
